@@ -1,28 +1,28 @@
 package asm.instruction;
 
 import asm.Block;
-import asm.asmVisitor;
 import asm.operand.SimpleReg;
 
 import java.util.HashSet;
 
-public class RTypeInstruction extends BasicInstruction {
+public class BrInstruction extends BasicInstruction{
     public String op;
-    public SimpleReg rd, rs1, rs2;
+    public SimpleReg rs1, rs2;
+    public Block dest;
 
-    public RTypeInstruction(String Op, SimpleReg Rd, SimpleReg Rs1, SimpleReg Rs2, Block Father) {
-        super(Father);
-        this.rd = Rd;
-        this.rs1 = Rs1;
-        this.rs2 = Rs2;
-        this.op = Op;
+    public BrInstruction(String op, SimpleReg rs1, SimpleReg rs2, Block dest, Block parent) {
+        super(parent);
+        this.op = op;
+        this.rs1 = rs1;
+        this.rs2 = rs2;
+        this.dest = dest;
     }
 
     public String toString() {
-        return String.format("%s %s, %s, %s", op, rd, rs1, rs2);
+        return "%s %s, %s, %s".formatted(op, rs1, rs2, dest.label);
     }
 
-    public void accept(asmVisitor visitor) {
+    public void accept(asm.asmVisitor visitor) {
         visitor.visit(this);
     }
 
@@ -33,28 +33,21 @@ public class RTypeInstruction extends BasicInstruction {
         return ret;
     }
 
-    @Override
     public HashSet<SimpleReg> defs() {
-        var ret = new HashSet<SimpleReg>();
-        ret.add(rd);
-        return ret;
+        return new HashSet<SimpleReg>();
     }
 
-    @Override
     public void replaceUse(SimpleReg oldReg, SimpleReg newReg) {
         if (rs1 == oldReg) {
             rs1 = newReg;
         }
+
         if (rs2 == oldReg) {
             rs2 = newReg;
         }
-
     }
 
     @Override
     public void replaceDef(SimpleReg oldReg, SimpleReg newReg) {
-        if (rd == oldReg) {
-            rd = newReg;
-        }
     }
 }
